# FancyRobot

./: README.md
docker/: Dockerfile  build.sh  into.sh  start.sh
docs/: problem.md
launch/: main.launch  occupancy.launch  pnc.launch  sim.launch  tf.launch
launch/config/: control.yaml  controller.yaml  occupancy_accumulated_pars.yaml  occupancy_oneshot_pars.yaml  planner.yaml  planning.yaml  route_creator.yaml  rviz_config.rviz
launch/rviz/: thunder_sim.rviz
msgs/pnc_task_msgs/: CMakeLists.txt  Readme.md  package.xml
msgs/pnc_task_msgs/msg/: ControlTask.msg  PlanningTask.msg
msgs/rtp_msgs/: CMakeLists.txt  Readme.md  package.xml
msgs/rtp_msgs/msg/: PathPointMetadata.msg  PathPointWithMetadata.msg  PathStamped.msg  RouteMetadata.msg  RouteTask.msg
msgs/thunder_msgs/: package.xml
scenes/lua/: hunter_control_script.lua
test_package/: CMakeLists.txt  README.md  package.xml
test_package/config/: Params.cfg
test_package/include/: test_class.h
test_package/launch/: test_node.launch
test_package/launch/config/: test_node_params.yaml
test_package/src/: main.cpp  test_class.cpp
thunder_msgs/: CMakeLists.txt
thunder_msgs/msg/: ThunderControl.msg
