<?xml version="1.0"?>
<package format="2">
  <name>thunder_msgs</name>
  <version>0.0.1</version>
  <description>The thunder_msgs package</description>

  <maintainer email="shepel@integrant.ru">shepel</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
